--- a/app/html/index.html
+++ b/app/html/index.html
@@ -8,31 +8,31 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <!-- CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/bootstrap-responsive.min.css" rel="stylesheet">
-    <link href="css/font-awesome.min.css" rel="stylesheet">
-    <link href="css/app.css" rel="stylesheet">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/bootstrap-responsive.min.css" rel="stylesheet">
+    <link href="/css/font-awesome.min.css" rel="stylesheet">
+    <link href="/css/app.css" rel="stylesheet">
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
     <!-- favicon -->
-    <link rel="shortcut icon" href="images/favicon.png">
+    <link rel="shortcut icon" href="/images/favicon.png">
 </head>
 
 <body>
 <!-- JavaScript
 =========== -->
 <!-- Placed at the end of the document so the pages load faster -->
-<script src="js/jquery-2.0.3.min.js"></script>
-<script src="js/sha256.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/handlebars.js"></script>
-<script src="js/ember-1.4.0.js"></script>
-<script src="js/mantel.min.js"></script>
-<script src="js/quarry-data.min.js"></script>
-<script src="js/app.min.js"></script>
-<script src="js/templates.js"></script>
+<script src="/js/jquery-2.0.3.min.js"></script>
+<script src="/js/sha256.js"></script>
+<script src="/js/bootstrap.min.js"></script>
+<script src="/js/handlebars.js"></script>
+<script src="/js/ember-1.4.0.js"></script>
+<script src="/js/mantel.min.js"></script>
+<script src="/js/quarry-data.min.js"></script>
+<script src="/js/app.min.js"></script>
+<script src="/js/templates.js"></script>
 </body>
 </html>
